# fraud_detection_platform

./: .gitignore  README.md  pyproject.toml  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
notebooks/: experimentation.ipynb
scripts/: simulate_transactions.py
src/api/: logger.py  main.py  schemas.py  service.py
src/data/: generate_data.py  schema.py  validate.py
src/features/: build_features.py  preprocess.py
src/models/: evaluate.py  train.py
src/monitoring/: evidently_runner.py
src/ui/: streamlit_app.py
tests/: test_api.py  test_data.py  test_features.py  test_model.py
